--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,39 @@ body {
     font-family: futura-pt, Avenir, -apple-system,BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial,sans-serif;
     background-color: rgb(243, 243, 243);
 }
+
+h1 {
+    font-size: 3rem;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.left-content {
+    display: flex;
+    border: 2px solid #000;
+    flex-direction: column;
+    max-width: 40%;
+    padding: 1rem;
+}
+
+.left-content form {
+    display: flex;
+    flex-direction: column;
+}
+
+form input, form button {
+    flex-grow: 0;
+    width: 10rem;
+}
+
+#fizzbuzz-results {
+    border: 2px solid #000;
+    width: 300px;
+    height: 300px;
+    background-color: #fff;
+    margin: 0;
+}
