--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,21 @@ body {
 
 h1 {
     font-size: 3rem;
+    margin-left: 19.5vw;
+    margin-bottom: 0.5rem;
+}
+
+p {
+    font-size: 1.2rem;
+}
+
+.left-content p {
+    margin-top: 0;
+    line-height: 1.4;
+}
+
+p span {
+    font-size: 2.5rem;
 }
 
 main {
@@ -20,9 +35,10 @@ main {
 
 .left-content {
     display: flex;
+    background-color: #fff;
     border: 2px solid #000;
     flex-direction: column;
-    max-width: 40%;
+    max-width: 35%;
     padding: 1rem;
 }
 
@@ -31,9 +47,39 @@ main {
     flex-direction: column;
 }
 
+.form-wrapper {
+    display: flex;
+}
+
+label {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-left: 5px;
+}
+
 form input, form button {
+    box-sizing: border-box;
+    align-self: center;
     flex-grow: 0;
-    width: 10rem;
+    width: 100%;
+    border: 2px solid #000;
+    margin: 5px;
+    padding: 1rem;
+    font-size: large;
+}
+
+#submit-btn {
+    background-color: #fbffa7;
+}
+
+#submit-btn:hover {
+    cursor: pointer;
+    background-color: #ff764d;
+    transition: background-color 0.5s;
+}
+
+#submit-btn:not(:hover) {
+    transition: background-color 0.5s;
 }
 
 #fizzbuzz-results {
@@ -42,4 +88,10 @@ form input, form button {
     height: 300px;
     background-color: #fff;
     margin: 0;
+    padding: 0.8rem;
+}
+
+/* Styling the "placeholder" text */
+#fizzbuzz-results.before-results {
+    color: rgba(0, 0, 0, 0.5);
 }
