--- a/styles.css
+++ b/styles.css
@@ -95,3 +95,9 @@ form input, form button {
 #fizzbuzz-results.before-results {
     color: rgba(0, 0, 0, 0.5);
 }
+
+#fizzbuzz-results.after-results {
+    /* Remove opacity value */
+    color: #000;
+    overflow-y: scroll;
+}
