--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body {
 
 h1 {
     font-size: 3rem;
-    margin-left: 19.5vw;
     margin-bottom: 0.5rem;
 }
 
@@ -21,6 +20,7 @@ p {
 .left-content p {
     margin-top: 0;
     line-height: 1.4;
+    margin-left: 5px;
 }
 
 p span {
@@ -33,13 +33,25 @@ main {
     gap: 1rem;
 }
 
+.wrapper {
+    max-width: 55vw;
+    margin: 0 auto;
+}
+
 .left-content {
     display: flex;
     background-color: #fff;
     border: 2px solid #000;
     flex-direction: column;
-    max-width: 35%;
+    width: calc(100% - 300px);
     padding: 1rem;
+}
+
+.right-content {
+    width: 300px;
+    max-height: 300px;
+    /* To prevent height change when having 11 results */
+    min-height: 300px;
 }
 
 .left-content form {
@@ -83,9 +95,10 @@ form input, form button {
 }
 
 #fizzbuzz-results {
+    box-sizing: border-box;
     border: 2px solid #000;
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     background-color: #fff;
     margin: 0;
     padding: 0.8rem;
